libs/flake/KoCanvasResourceProvider.h
@@ -270,6 +270,17 @@ Q_SIGNALS:
      */
     void canvasResourceChanged(int key, const QVariant &value);
 
+    /**
+     * This signal is emitted every time a resource is attempted to be
+     * changed. The this signal is emitted even when the new value of
+     * the resource is the same as the current value. This method is called
+     * **before** the actual change has happended at the resource manager.
+     * @param key the identifying key for the resource
+     * @param value the variants new value.
+     * @see KoCanvasResourceProvider::CanvasResource
+     */
+    void canvasResourceChangeAttempted(int key, const QVariant &value);
+
 private:
     KoCanvasResourceProvider(const KoCanvasResourceProvider&);
     KoCanvasResourceProvider& operator=(const KoCanvasResourceProvider&);
